Fix table name in DbImporter and BookAuthor entity for consistency